# tiangao_pcl

./: CMakeLists.txt  README.md  findcylinder.cpp  findcylinder_tian.cpp  getTrunkPC.cpp  pcd_write.cpp  pcl_viewer
data/: 01_D1N3_2019-05-26.pcd  01_D1N3_2019-05-27.pcd  01_D1N3_2019-05-29.pcd  01_D1N3_2019-05-29.ply  rotPlant.pcd  rotPlant.ply  rotPlant_new.pcd  rotPlant_new.ply
findcylinder/: README.md  findcylinder.cpp
findcylinder_v2/: CMakeLists.txt  README.md  findcylinder.cpp  functions.hpp
ply2pcd/: CMakeLists.txt
project_0/: CMakeLists.txt  README.md  createPC.cpp  fitting_3d.cpp
